Minor frontend changes.

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
         <div id="map"></div>
     </div>
     <div class="block">
-        <input id="search" type="text">
+        <input id="search" type="text" placeholder="Address or place name">
     </div>
     <div class="block">
         <div id="object"></div>
